@@ -49,6 +49,7 @@ void mutt_bcache_close (body_cache_t **bcache);
 
 FILE* mutt_bcache_get(body_cache_t *bcache, const char *id);
 FILE* mutt_bcache_put(body_cache_t *bcache, const char *id);
+int mutt_bcache_move(body_cache_t *bcache, const char *id, const char *newid);
 int mutt_bcache_del(body_cache_t *bcache, const char *id);
 int mutt_bcache_exists(body_cache_t *bcache, const char *id);
 
